--- a/Homework 2/CSS/Style.css
+++ b/Homework 2/CSS/Style.css
@@ -4,25 +4,21 @@ body{
 h1 {
     font-size: 48px;
     font-weight: bold;
-
 }
 
 h1 { 
     color: crimson;}
 h2 {
     color: darkgreen;}
+.Fruit {
+    margin-top: 10px;}
 
     p{
-        max-width: 720px;
-        margin: 10px 0px 0px 0px; 
-    
 
 color: darkblue; 
 
-
-
     max-width: 720px;
-    margin: 10px 0px 0px 0px;
+    margin: 10px;
 
 background-color: deepskyblue;
 border: 10px solid burlywood;
