--- a/Homework 3/CSS/style.css
+++ b/Homework 3/CSS/style.css
@@ -4,13 +4,13 @@ body {margin: 0;
 .black {
     width: 810px;
     height: 500px;
-    background: black;
+    background: silver;
     float: left;
     position: absolute;
 }
 
 .orange {
-    width: 800px;
+    width: 99%;
     height: 45px;
     background: orange;
    margin-left: 5px;
@@ -20,7 +20,7 @@ body {margin: 0;
    
 
 .red  {
-    width: 200px;
+    width: 24.5%;
     height: 400px;
     background: red ;
     margin-left: 5px;
@@ -29,7 +29,7 @@ body {margin: 0;
 }
 
 .green{
-    width: 200px;
+    width: 24.5%;
     height: 400px;
     background: green ;
     float: left;
@@ -37,7 +37,7 @@ body {margin: 0;
 }
 
 .blue {
-    width: 200px;
+    width: 24.5%;
     height: 400px;
     background: blue ;
     float: left;
@@ -45,7 +45,7 @@ body {margin: 0;
 
 }
 .black2 {
-    width: 200px;
+    width: 24.5%;
     height: 400px;
     background: black ;
     float: left;
@@ -53,7 +53,7 @@ body {margin: 0;
 
 
 .orange2 {
-    width: 800px;
+    width: 99%;
     height: 45px;
     background: orange ;
     margin-left: 5px;
