--- a/Homework 5/style.css
+++ b/Homework 5/style.css
@@ -130,3 +130,253 @@ font-size: 11px;
     flex-direction: column;
     justify-content: center;
 }
+
+.advertisment {
+    color: #bcbbbc;
+}
+
+.container {
+max-width: 1180px;
+    margin: 0 auto;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.statistic {
+    cursor: pointer;
+}
+
+.menu5 {
+    max-width: 1129px;
+    margin: 0 auto;
+
+}
+.flex {
+    display: flex;
+}
+.covid {
+    text-transform: uppercase;
+    font-weight: normal;
+    margin: 15px 0 10px 10px;
+    font-size: 18px;
+}
+
+.statistic:hover,
+.card-item:hover {
+    z-index: 1;
+    color: #7e0019;
+}
+
+.card-wrap:hover {
+    box-shadow: 3px 3px 5px;
+    color: #7e0019;
+}
+
+.graf-cards {
+    margin-top: 20px;
+
+}
+
+.card-wrap {
+    border: 1px solid #bcbbbc;
+    width: 310px;
+    height: 75px;
+    padding: 5px;
+    position: relative;
+    margin: 5px;
+}
+
+/* REAL GRAPHIC OF SITUATION *********************************************************************************/
+.graf {
+    position: absolute;
+    right: 80px;
+    top: 30px;
+}
+
+.up {
+    display: block;
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(-30px);
+    bottom: -35px;
+    flex-grow: 4;
+}
+
+.down {
+    display: block;
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(-55px);
+    bottom: -35px;
+    flex-grow: 2;
+}
+
+.up::before {
+    content: "";
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(-40px);
+
+}
+
+.down::before {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(12px);
+
+}
+
+.middle::before {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(-85px);
+    bottom: -35px;
+
+
+}
+
+.up::after {
+    content: "";
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(32px);
+
+}
+
+.down::after {
+    content: "";
+    display: block;
+    width: 5px;
+    height: 1px;
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(73px);
+
+}
+
+
+.middle::after {
+    content: "";
+    display: block;
+    width: 5px;
+    /* height: 1px; */
+    background-color: #7e0019;
+    position: absolute;
+    transform: translateX(-14px);
+    margin-top: -3px;
+    bottom: -35px;
+
+}
+
+.count {
+    color:darkred;
+    position: absolute;
+    right: 1%;
+    bottom: 10%;
+    font-size: 16px;
+
+}
+
+.card-wrap p {
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.card-item {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #333;
+
+}
+
+.up,
+.up::before,
+.up::after {
+    animation: grow-cols-F 3.85s infinite linear;
+    transition: all ease-out 0.2s;
+
+}
+
+.down,
+.down::after,
+.down::before {
+    animation: grow-cols-S 3.85s infinite linear;
+    transition: all ease-out 0.4s;
+
+}
+
+.middle::after,
+.middle::before {
+    animation: grow-cols-M 3.85s infinite linear;
+    transition: all ease-out 0.3s;
+}
+
+.sub_title {
+    margin: 10px 0 10px 10px;
+}
+
+.sub_title span {
+    font-weight: bolder;
+    color: #000;
+}
+
+.statistic a {
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 0 0 10px 10px;
+}
+
+/* MEDIA *******************************************************************/
+
+@keyframes grow-cols-F {
+    0% {
+        height: 1px;
+    }
+
+    100% {
+        height: 47px;
+    }
+}
+
+@keyframes grow-cols-S {
+    0% {
+        height: 1px;
+    }
+
+    100% {
+        height: 33px;
+    }
+}
+
+@keyframes grow-cols-M {
+    0% {
+
+        height: 1px;
+    }
+
+    100% {
+
+        height: 39px;
+
+    }
+}
